<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".control.main.PlaceholderFragmentReferenceMaterials">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <!--    <ImageView-->
    <!--        android:id="@+id/imageView11"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:alpha="0.2"-->
    <!--        android:contentDescription="@string/background"-->
    <!--        android:src="@drawable/mad"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <TextView
        android:id="@+id/admin_referenceMaterials"
        android:layout_width="401dp"
        android:layout_height="4dp"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        />

    <TextView
        android:id="@+id/papers_id2"
        android:layout_width="171dp"
        android:layout_height="27dp"
        android:text="@string/reference_materials_id3010"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="	#000000"
        />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/id_ans2"
            android:layout_width="290dp"
            android:layout_height="51dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType=""

            />
        <ImageButton
            android:id="@+id/search_btn_papers"
            android:layout_width="57dp"
            android:layout_height="42dp"
            android:contentDescription="@string/todo3024"
            android:src="@drawable/search1"
            />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/papers_title2"
        android:layout_width="234dp"
        android:layout_height="31dp"
        android:text="@string/reference_material_title3011"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="	#000000"
        />

    <EditText
        android:id="@+id/title_ans2"
        android:layout_width="292dp"
        android:layout_height="52dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType=""
        />







    <TextView
        android:id="@+id/papers_url"
        android:layout_width="241dp"
        android:layout_height="33dp"
        android:text="@string/reference_material_url3012"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="	#000000"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/url_ans"
            android:layout_width="284dp"
            android:layout_height="49dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            />

        <ImageButton
            android:id="@+id/choose_btn2"
            android:layout_width="68dp"
            android:layout_height="47dp"
            android:contentDescription="@string/todo3026"
            android:src="@drawable/upload2"
            />
    </LinearLayout>

    <Button
        android:id="@+id/papers_delete_btn"
        android:layout_width="351dp"
        android:layout_height="64dp"
        android:text="@string/delete3001"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/papers_update_btn"
        android:layout_width="346dp"
        android:layout_height="61dp"
        android:text="@string/update3004"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        />

</LinearLayout>
</LinearLayout>