<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/background"
    android:orientation="vertical"
    android:background="@drawable/mad"
    android:alpha="0.7"
    android:gravity="center"
    tools:context=".control.main.PlaceholderFragmentReferenceMaterials">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"

    >
    <!--    <ImageView-->
    <!--        android:id="@+id/imageView13"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:alpha="0.2"-->
    <!--        android:contentDescription="@string/background"-->
    <!--        android:src="@drawable/mad"-->
    <!--         />-->

    <TextView
        android:id="@+id/admin_referenceMaterials"
        android:layout_width="390dp"
        android:layout_height="12dp"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/papers_id"
        android:layout_width="171dp"
        android:layout_height="27dp"
        android:text="@string/reference_materials_id3010"
        android:textColor="	#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="start"
        android:layout_marginStart="5dp"
        />

    <EditText
        android:id="@+id/id_ans"
        android:layout_width="376dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType=""
        android:layout_marginStart="5dp"
        />

    <TextView
        android:id="@+id/papers_title"
        android:layout_width="234dp"
        android:layout_height="31dp"
        android:text="@string/reference_material_title3011"
        android:textColor="	#000000"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginStart="5dp"
        />

    <EditText
        android:id="@+id/title_ans"
        android:layout_width="373dp"
        android:layout_height="60dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType=""
        android:layout_marginStart="5dp"
        />

    <Button
        android:id="@+id/papers_add_btn"
        android:layout_width="227dp"
        android:layout_height="62dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/upload3015"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />
</LinearLayout>
</LinearLayout>